pdf-visualforce/force-app/main/default/objects/Order/fields/AddressCode__c.field-meta.xml
<CustomField>
    <fullName>AddressCode__c</fullName>
    <externalId>true</externalId>
    <label>Address Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>