pdf-visualforce/force-app/main/default/objects/Order/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>Data de Vencimento</label>
    <type>Date</type>
</CustomField>