pdf-visualforce/force-app/main/default/objects/Order/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <externalId>true</externalId>
    <label>Order Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>