pdf-visualforce/force-app/main/default/objects/Order/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Forma de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Vista</fullName>
            </value>
            <value>
                <fullName>Boleto</fullName>
            </value>
            <value>
                <fullName>Carne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>