pdf-visualforce/force-app/main/default/objects/Order/fields/TypeOfFreight__c.field-meta.xml
<CustomField>
    <fullName>TypeOfFreight__c</fullName>
    <label>Type of Freight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>